--- a/public/HandicraftsAuction/css/HandicraftsAuction.css
+++ b/public/HandicraftsAuction/css/HandicraftsAuction.css
@@ -16,6 +16,17 @@ body {
 	line-height: 1.429; */
 }
 
+.custom-footer{
+    flex-shrink: 0;
+    margin-top:17%;
+    height: 50px;
+    background-color: #f2f2f2;
+    line-height: 50px;
+    text-align: center;
+    color: black;
+}
+
+
 hr{
     margin-bottom: 25px !important;
     border: 5px solid rgba(0,0,0,.1);
